app/components/views/Home/index.module.css
@value bp-medium, bp-small, bp-large, bp-desktop, bp-desktop-large from "@klimadao/lib/theme/breakpoints.css";

.container {
  position: relative; /* new stacking context */
  z-index: 0;
  overflow-x: hidden;
  overflow-y: auto;
  background-color: var(--surface-01);
  display: grid;
  align-content: flex-start;
  min-height: 100vh;
  grid-template-rows: 1fr;
}

.container[data-scrolllock="true"] {
  overflow-y: hidden;
  max-height: 100vh;
}

.container :global(svg) {
  font-size: 2.4rem;
  width: 2.4rem;
  height: 2.4rem;
}

.desktopNavMenu {
  display: none;
}
.cardGrid {
  display: grid;
  gap: 1.6rem;
  padding: 1.6rem;
  align-content: start;
  max-width: 64rem;
  justify-self: center;
  width: 100%;
}
.controls {
  display: flex;
  justify-content: flex-end;
  gap: 1.6rem;
}
.menuButton {
  background-color: var(--surface-02);
  min-height: 4.8rem;
  min-width: 4.8rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 0.8rem;
  margin-right: auto;
}
.menuButton:hover,
.menuButton:focus {
  opacity: 0.7;
}
.mobileNavMenu_overlay {
  z-index: 2;
  visibility: hidden;
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  background-color: #0e0e0e;
  opacity: 0;
  transition: all 0.4s ease-out;
}
.mobileNavMenu_overlay[data-visible="true"] {
  visibility: visible;
  opacity: 0.4;
}
.mobileNavMenu {
  position: absolute;
  visibility: hidden;
  z-index: 2;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  transition: all 0.4s ease-out;
  transform: translateX(-100%);
  max-width: 24.4rem;
}
.mobileNavMenu[data-visible="true"] {
  visibility: visible;
  transform: translateX(0%);
}

@media bp-small {
  .cardGrid {
    gap: 2.4rem;
    padding: 2.4rem;
  }
}

@media bp-medium {
  .cardGrid {
    gap: 2.4rem;
    padding: 2.4rem;
  }
}

@media bp-desktop {
  .container {
    max-height: 100vh;
    overflow-y: hidden;
    display: grid;
    grid-template-columns:
      [sidebar] 24.4rem
      [full-start] minmax(0px, 1fr)
      [full-end];
  }
  .cardGrid {
    overflow-y: auto;
    display: grid;
    grid-column: full;
    grid-template-columns:
      [cardsleft] minmax(38rem, auto)
      [cardsright] minmax(auto, 38rem);
    grid-template-rows: min-content 1fr 1fr 1fr;
    max-width: unset;
  }
  .controls {
    grid-column: cardsright;
  }
  .menuButton,
  .mobileMenu,
  .mobileNavMenu[data-visible="true"],
  .mobileNavMenu_overlay,
  .mobileNavMenu_overlay[data-visible="true"] {
    display: none;
  }
  .desktopNavMenu {
    display: flex;
  }
}

@media bp-desktop-large {
  .container {
    max-height: 100vh;
    overflow-y: hidden;
    display: grid;
    grid-template-columns:
      [sidebar] 28.4rem
      [full-start] minmax(0px, 1fr)
      [full-end];
  }
}

